# dmp_animation

./: CMakeLists.txt  README.md  package.xml
nodes/: simple_dmp_learn.py  squash_stretch.py
src/: dmp_interface.py
