<?xml version="1.0"?>
<package>
  <name>dmp_animation</name>
  <version>0.0.1</version>
  <description>The dmp_animation package, demonstrating use of animation principles in robot control</description>

  
  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/dmp_animation</url> -->

  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dmp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dmp</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
